--- a/index.html
+++ b/index.html
@@ -3,123 +3,217 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel = 'stylesheet' href = 'style.css'>
     <title>Plateful | Landing</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Plateful</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#about-us">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact-us">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link btn btn-primary text-white" href="#login">Log In</a></li>
-                </ul>
-            </div>
-        </div>
+
+    <nav>
+        <ul>
+            <li class = 'logo-item'>
+                <a class = 'nav-link' href="#">Plateful</a>
+            </li>
+            <li>
+                <a class = 'nav-link' href="#about-us">About Us</a>
+            </li>
+            <li>
+                <a class = 'nav-link' href="#services">Services</a>
+            </li>
+            <li>
+                <a class = 'nav-link' href="#contact-us">Contact Us</a>
+            </li>
+            <li class = 'end-item'>
+                <a class = 'nav-link'>Log In</a>
+            </li>
+        </ul>
     </nav>
-    <div class="container-fluid text-center text-white bg-primary vh-100 d-flex flex-column justify-content-center align-items-center" style="background-image: url('/assets/food-template.jpg'); background-size: cover; background-position: center;">
-        <h1 class="display-4 fw-bold">GOOD FOOD</h1>
-        <h2 class="display-5 text-white-50">LOW COSTS</h2>
-        <p class="lead mt-3" data-aos="fade-up" data-aos-delay="2000">Welcome to Plateful, where we turn surplus food into affordable meals!</p>
-        <button class="btn btn-light btn-lg mt-4"><i class="fa-solid fa-chevron-down"></i></button>
+
+    <div class = 'container image-container'>
+        <div class = 'container main-container'>
+            <div class = 'text-container'>
+                <div class = 'main-text align-left'><div class = 'text-box-effect text-box-left'></div><div class = 'box-trailer text-box-left'></div><span class = 'align-span'>GOOD FOOD</span></div>
+                <div class = 'main-text align-right'><span class = 'align-span outline-text'>LOW COSTS</span><div class = 'text-box-effect text-box-right'></div><div class = 'box-trailer text-box-right'></div></div>
+            </div>
+        </div>
+
+        <div class = 'container explanation-container'>
+            <p class = 'explanation-para' data-aos="fade-up" data-aos-delay = '2000'>Welcome to Plateful, where we turn surplus food into affordable meals! Our mission is to reduce food waste by connecting you with delicious leftover dishes from local restaurants at unbeatable prices. Whether you’re a foodie seeking new flavors or looking for budget-friendly options, Plateful helps you enjoy tasty meals while supporting sustainability. Join us in making a difference—one plate at a time!</p>
+        </div>
+
+        <div class = 'down-btn-container'>
+            <button class = 'down-btn'><i class="fa-solid fa-chevron-down"></i></button>
+        </div>
     </div>
-    <div class="container text-center py-5" id="about-us">
-        <p class="lead" data-aos="fade-up">Our mission is to reduce food waste by connecting you with delicious leftover dishes from local restaurants at unbeatable prices. Whether you’re a foodie seeking new flavors or looking for budget-friendly options, Plateful helps you enjoy tasty meals while supporting sustainability. Join us in making a difference—one plate at a time!</p>
-    </div>
-    <div class="container py-5" id="steps">
-        <div class="row text-center">
-            <h2 class="mb-5">Steps</h2>
-            <div class="col-md-3 mb-4">
-                <div class="card shadow-sm">
-                    <div class="card-body">
-                        <h3 class="card-title">1. Browse Deals</h3>
-                        <p class="card-text">Discover surplus food from nearby restaurants at discounted prices.</p>
+
+    <div class = "trending-books" id = "trending">
+        <div class = "header-box-trending">
+            <h1>Order Now</h1>
+        </div>
+        <div class = "books-box">
+            <div class = 'book-container'>
+                <div class = "book-image">
+                </div>
+                <div class = "book-text">
+                    <div class = "book-text-container">
+                        <p class = "book-text-title">Paratha</p>
+                        <p class = "book-text-grade">punjab grill</p>
+                        <p class = "book-text-seller">₹200</p>
+                    </div>
+                    <div class = "see-more-container">
+                      <button class = "see-more">See More</button>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-4">
-                <div class="card shadow-sm">
-                    <div class="card-body">
-                        <h3 class="card-title">2. Select Items</h3>
-                        <p class="card-text">Choose from a variety of delicious options.</p>
+            <div class = 'book-container'>
+                <div class = "book-image">
+                </div>
+                <div class = "book-text">
+                    <div class = "book-text-container">
+                        <p class = "book-text-title">Paratha</p>
+                        <p class = "book-text-grade">punjab grill</p>
+                        <p class = "book-text-seller">₹200</p>
+                    </div>
+                    <div class = "see-more-container">
+                      <button class = "see-more">See More</button>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-4">
-                <div class="card shadow-sm">
-                    <div class="card-body">
-                        <h3 class="card-title">3. Make Payment</h3>
-                        <p class="card-text">Pay securely through our platform and receive pickup instructions.</p>
+            <div class = 'book-container'>
+                <div class = "book-image">
+                </div>
+                <div class = "book-text">
+                    <div class = "book-text-container">
+                        <p class = "book-text-title">Paratha</p>
+                        <p class = "book-text-grade">punjab grill</p>
+                        <p class = "book-text-seller">₹200</p>
+                    </div>
+                    <div class = "see-more-container">
+                      <button class = "see-more">See More</button>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-4">
-                <div class="card shadow-sm">
-                    <div class="card-body">
-                        <h3 class="card-title">4. Pick Up Your Order</h3>
-                        <p class="card-text">Show your confirmation to pick up your order.</p>
+            <div class = 'book-container'>
+                <div class = "book-image">
+                </div>
+                <div class = "book-text">
+                    <div class = "book-text-container">
+                        <p class = "book-text-title">Paratha</p>
+                        <p class = "book-text-grade">punjab grill</p>
+                        <p class = "book-text-seller">₹200</p>
+                    </div>
+                    <div class = "see-more-container">
+                      <button class = "see-more">See More</button>
+                    </div>
+                </div>
+            </div>
+            <div class = 'book-container'>
+                <div class = "book-image">
+                </div>
+                <div class = "book-text">
+                    <div class = "book-text-container">
+                        <p class = "book-text-title">Paratha</p>
+                        <p class = "book-text-grade">punjab grill</p>
+                        <p class = "book-text-seller">₹200</p>
+                    </div>
+                    <div class = "see-more-container">
+                      <button class = "see-more">See More</button>
+                    </div>
+                </div>
+            </div>
+            <div class = 'book-container'>
+                <div class = "book-image">
+                </div>
+                <div class = "book-text">
+                    <div class = "book-text-container">
+                        <p class = "book-text-title">Paratha</p>
+                        <p class = "book-text-grade">punjab grill</p>
+                        <p class = "book-text-seller">₹200</p>
+                    </div>
+                    <div class = "see-more-container">
+                      <button class = "see-more">See More</button>
+                    </div>
+                </div>
+            </div>
+            <div class = 'book-container'>
+                <div class = "book-image">
+                </div>
+                <div class = "book-text">
+                    <div class = "book-text-container">
+                        <p class = "book-text-title">Paratha</p>
+                        <p class = "book-text-grade">punjab grill</p>
+                        <p class = "book-text-seller">₹200</p>
+                    </div>
+                    <div class = "see-more-container">
+                      <button class = "see-more">See More</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container py-5" id="trending">
-        <h2 class="text-center mb-4">Order Now</h2>
-        <div class="row gy-4">
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="assets/placeholderimg.jpg" class="card-img-top" alt="Dish">
-                    <div class="card-body">
-                        <h5 class="card-title">Paratha</h5>
-                        <p class="card-text">Punjab Grill - ₹200</p>
-                        <button class="btn btn-primary">See More</button>
-                    </div>
+
+    <div class = 'container steps-container'>
+        <div class = 'scroll-image-container'>
+            <div class = 'scroll-title'>
+                <h1>STEPS</h1>
+            </div>
+            <div class='scroll-text scroll-left scroll-top'>
+                <div class='scroll-number'>1</div>
+                <div class='scroll-header'>Browse Deals</div>
+                <div class='scroll-para'>
+                    Discover surplus food from nearby restaurants at discounted prices. These deals are updated daily, so act fast to grab your favorites before they’re gone!
                 </div>
+            </div>
+            <div class='scroll-text scroll-left scroll-bottom'>
+                <div class='scroll-number'>2</div>
+                <div class='scroll-header'>Select Your Items</div>
+                <div class='scroll-para'>
+                    Choose from a variety of delicious options. Add your selected items to your cart and review your choices before proceeding to checkout.
+                </div>
+            </div>
+            <div class='scroll-text scroll-right scroll-bottom'>
+                <div class='scroll-number'>3</div>
+                <div class='scroll-header'>Make Payment</div>
+                <div class='scroll-para'>
+                    Pay securely through our platform. Once the payment is completed, you'll receive a confirmation with pickup instructions.
+                </div>
+            </div>
+            <div class='scroll-text scroll-right scroll-top'>
+                <div class='scroll-number'>4</div>
+                <div class='scroll-header'>Pick Up Your Order</div>
+                <div class='scroll-para'>
+                    Head to the restaurant and show your confirmation to pick up your order. Enjoy your meal while helping reduce food waste!
+                </div>
+            </div>            
+        </div>
+    </div>
+
+    <div class="container services-container">
+        <div class="header-box">
+            <h1 data-aos="fade-up">Our Services</h1>
+        </div>
+
+        <div class="services-boxes" data-aos="fade-up">
+            <div class="service-box">
+                <i class="fa-solid fa-utensils service-icon"></i>
+                <h2>Curated Meals</h2>
+                <p>We turn unsold, fresh food into affordable meals for you.</p>
+            </div>
+            <div class="service-box">
+                <i class="fa-solid fa-hand-holding-heart service-icon"></i>
+                <h2>Sustainability</h2>
+                <p>Reduce food waste while enjoying delicious dishes.</p>
+            </div>
+            <div class="service-box">
+                <i class="fa-solid fa-truck-fast service-icon"></i>
+                <h2>Fast Delivery</h2>
+                <p>Choose delivery or pickup at your convenience.</p>
             </div>
         </div>
     </div>
-    <div class="container py-5" id="services">
-        <h2 class="text-center mb-4">Our Services</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card text-center p-3">
-                    <i class="fa-solid fa-utensils fa-2x mb-3"></i>
-                    <h4>Curated Meals</h4>
-                    <p>We turn unsold, fresh food into affordable meals for you.</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card text-center p-3">
-                    <i class="fa-solid fa-hand-holding-heart fa-2x mb-3"></i>
-                    <h4>Sustainability</h4>
-                    <p>Reduce food waste while enjoying delicious dishes.</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card text-center p-3">
-                    <i class="fa-solid fa-truck-fast fa-2x mb-3"></i>
-                    <h4>Fast Delivery</h4>
-                    <p>Choose delivery or pickup at your convenience.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer class="bg-dark text-white text-center py-3">
-        <p>Built with heart by Arnav, Nikhil, and Sohan</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    <script src = 'main.js'></script>
 </body>
 </html>
